--- a/views/post/detail.ejs
+++ b/views/post/detail.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,6 +9,7 @@
     <h1>detail</h1>
     title:<%=post.title %> <p></p>
     content:<%=post.content %> <p></p>
+    profile: <img src="<%=post.imgUrl %>" alt="" height="100" width="100"> <p></p>
     name:<%=post.author.name %> <p></p>
     email:<%=post.author.email %><p></p>
 
