--- a/views/post/add.ejs
+++ b/views/post/add.ejs
@@ -1,4 +1,172 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
+<html lang="en">
+<% include ../partial/head %>
+<body data-background-color="dark">
+	<div class="wrapper">
+		<% include ../partial/header %>
+
+		<% include ../partial/sidebar %>
+        <div class="main-panel">
+			<div class="content">
+				<div class="page-inner">
+					<div class="page-header">
+						<h4 class="page-title">Forms</h4>
+						<ul class="breadcrumbs">
+							<li class="nav-home">
+								<a href="#">
+									<i class="flaticon-home"></i>
+								</a>
+							</li>
+							<li class="separator">
+								<i class="flaticon-right-arrow"></i>
+							</li>
+							<li class="nav-item">
+								<a href="#">Forms</a>
+							</li>
+							<li class="separator">
+								<i class="flaticon-right-arrow"></i>
+							</li>
+							<li class="nav-item">
+								<a href="#">Basic Form</a>
+							</li>
+						</ul>
+					</div>
+					<div class="row">
+						<div class="col-md-12">
+							<div class="card">
+								<div class="card-header">
+									<div class="card-title">Form Elements</div>
+								</div>
+								<div class="card-body">
+									<div class="row">
+										<div class="col-md-10 col-lg-10">
+										<form action="/posts/add" method="post" enctype="multipart/form-data">									
+											<div class="form-group">
+												<label for="content">title</label>
+												<input type="text" class="form-control"  name="title">
+											
+											</div>
+											<div class="form-group">
+												<label for="content">content</label>
+												<input type="text" class="form-control"  name="content">
+
+												
+                                            </div>
+                                           
+
+											<div class="form-group">
+                                                <label for="author">Author</label>
+                                                 <select name="author" id="author" name="author">
+                                                    <% for(var i=0;i<users.length;i++){ %>
+                                                        <option value="<%=users[i]._id%>"><%=users[i].name%></option>
+                                                   <% } %>
+                                                </select><p></p></div>
+
+
+                                                <div class="form-group">
+                                                    <label for="img">Img</label>
+                                                     <input type="file" name="photo" id="img">
+                                                    
+                                                </div>
+                                               
+                                        
+											<div class="card-action">
+												<button class="btn btn-success" type="submit">Submit</button>
+												<button class="btn btn-danger">Cancel</button>
+											</div>
+										</form>
+								</div>
+							</div>
+						</div>	
+										
+						
+			<% include ../partial/footer %>
+		</div>
+		
+		<!-- Custom template | don't include it in your project! -->
+		<div class="custom-template">
+			<div class="title">Settings</div>
+			<div class="custom-content">
+				<div class="switcher">
+					<div class="switch-block">
+						<h4>Logo Header</h4>
+						<div class="btnSwitch">
+							<button type="button" class="changeLogoHeaderColor" data-color="dark"></button>
+							<button type="button" class="changeLogoHeaderColor" data-color="blue"></button>
+							<button type="button" class="changeLogoHeaderColor" data-color="purple"></button>
+							<button type="button" class="changeLogoHeaderColor" data-color="light-blue"></button>
+							<button type="button" class="changeLogoHeaderColor" data-color="green"></button>
+							<button type="button" class="changeLogoHeaderColor" data-color="orange"></button>
+							<button type="button" class="changeLogoHeaderColor" data-color="red"></button>
+							<button type="button" class="changeLogoHeaderColor" data-color="white"></button>
+							<br/>
+							<button type="button" class="selected changeLogoHeaderColor" data-color="dark2"></button>
+							<button type="button" class="changeLogoHeaderColor" data-color="blue2"></button>
+							<button type="button" class="changeLogoHeaderColor" data-color="purple2"></button>
+							<button type="button" class="changeLogoHeaderColor" data-color="light-blue2"></button>
+							<button type="button" class="changeLogoHeaderColor" data-color="green2"></button>
+							<button type="button" class="changeLogoHeaderColor" data-color="orange2"></button>
+							<button type="button" class="changeLogoHeaderColor" data-color="red2"></button>
+						</div>
+					</div>
+					<div class="switch-block">
+						<h4>Navbar Header</h4>
+						<div class="btnSwitch">
+							<button type="button" class="selected changeTopBarColor" data-color="dark"></button>
+							<button type="button" class="changeTopBarColor" data-color="blue"></button>
+							<button type="button" class="changeTopBarColor" data-color="purple"></button>
+							<button type="button" class="changeTopBarColor" data-color="light-blue"></button>
+							<button type="button" class="changeTopBarColor" data-color="green"></button>
+							<button type="button" class="changeTopBarColor" data-color="orange"></button>
+							<button type="button" class="changeTopBarColor" data-color="red"></button>
+							<button type="button" class="changeTopBarColor" data-color="white"></button>
+							<br/>
+							<button type="button" class="changeTopBarColor" data-color="dark2"></button>
+							<button type="button" class="changeTopBarColor" data-color="blue2"></button>
+							<button type="button" class="changeTopBarColor" data-color="purple2"></button>
+							<button type="button" class="changeTopBarColor" data-color="light-blue2"></button>
+							<button type="button" class="changeTopBarColor" data-color="green2"></button>
+							<button type="button" class="changeTopBarColor" data-color="orange2"></button>
+							<button type="button" class="changeTopBarColor" data-color="red2"></button>
+						</div>
+					</div>
+					<div class="switch-block">
+						<h4>Sidebar</h4>
+						<div class="btnSwitch">
+							<button type="button" class="changeSideBarColor" data-color="white"></button>
+							<button type="button" class="changeSideBarColor" data-color="dark"></button>
+							<button type="button" class="selected changeSideBarColor" data-color="dark2"></button>
+						</div>
+					</div>
+					<div class="switch-block">
+						<h4>Background</h4>
+						<div class="btnSwitch">
+							<button type="button" class="changeBackgroundColor" data-color="bg2"></button>
+							<button type="button" class="changeBackgroundColor selected" data-color="bg1"></button>
+							<button type="button" class="changeBackgroundColor" data-color="bg3"></button>
+							<button type="button" class="selected changeBackgroundColor" data-color="dark"></button>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="custom-toggle">
+				<i class="flaticon-settings"></i>
+			</div>
+		</div>
+		<!-- End Custom template -->
+	</div>
+	<!--   Core JS Files   -->
+	<% include ../partial/script %>
+</body>
+</html> -->
+
+
+
+
+
+
+
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,17 +174,19 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>add</h1>
-    <form action="/posts/add" method="post">
+    <h1> Posts Add</h1>
+    <form action="/posts/add" method="post" enctype="multipart/form-data">
 title:<input type="text" name="title"><p></p>
 content:<input type="text" name="content"><p></p>
 author: <select name="author" id="author">
     <% for(var i=0;i<users.length;i++){ %>
         <option value="<%=users[i]._id%>"><%=users[i].name%></option>
    <% } %>
-</select>
-<input type="submit" value="add">
+</select><p></p>
+<label for="img">Img</label>
+<input type="file" name="photo" id="img"><p></p>
+<input type="submit" value="post add">
 
     </form>
 </body>
-</html>
+</html> -->
