--- a/views/post/list.ejs
+++ b/views/post/list.ejs
@@ -1,5 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
+<% include ../partial/head %>
+<body data-background-color="dark">
+	<div class="wrapper">
+		<% include ../partial/header %>
+
+		<% include ../partial/sidebar %>
+        <div class="main-panel">
+			<div class="content">
+				<div class="page-inner">
+					<div class="page-header">
+						<h4 class="page-title">Forms</h4>
+						<ul class="breadcrumbs">
+							<li class="nav-home">
+								<a href="#">
+									<i class="flaticon-home"></i>
+								</a>
+							</li>
+							<li class="separator">
+								<i class="flaticon-right-arrow"></i>
+							</li>
+							<li class="nav-item">
+								<a href="#">Forms</a>
+							</li>
+							<li class="separator">
+								<i class="flaticon-right-arrow"></i>
+							</li>
+							<li class="nav-item">
+								<a href="#">Basic Form</a>
+							</li>
+						</ul>
+					</div>
+					<div class="row">
+						<div class="col-md-12">
+							<div class="card">
+								<div class="card-header">
+									<div class="d-flex align-items-center">
+										<h4 class="card-title">Add Row</h4>
+										<button class="btn btn-primary btn-round ml-auto" data-toggle="modal" data-target="#addRowModal">
+											<i class="fa fa-plus"></i>
+											Add Row
+										</button>
+									</div>
+								</div>
+								<div class="card-body">
+									<!-- Modal -->
+									<div class="modal fade" id="addRowModal" tabindex="-1" role="dialog" aria-hidden="true">
+										<div class="modal-dialog" role="document">
+											<div class="modal-content">
+												<div class="modal-header no-bd">
+													<h5 class="modal-title">
+														<span class="fw-mediumbold">
+														New</span> 
+														<span class="fw-light">
+															Row
+														</span>
+													</h5>
+													<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+														<span aria-hidden="true">&times;</span>
+													</button>
+												</div>
+												<div class="modal-body">
+													<p class="small">Create a new row using this form, make sure you fill them all</p>
+													<form>
+														<div class="row">
+															<div class="col-sm-12">
+																<div class="form-group form-group-default">
+																	<label>Name</label>
+																	<input id="addName" type="text" class="form-control" placeholder="fill name">
+																</div>
+															</div>
+															<div class="col-md-6 pr-0">
+																<div class="form-group form-group-default">
+																	<label>Position</label>
+																	<input id="addPosition" type="text" class="form-control" placeholder="fill position">
+																</div>
+															</div>
+															<div class="col-md-6">
+																<div class="form-group form-group-default">
+																	<label>Office</label>
+																	<input id="addOffice" type="text" class="form-control" placeholder="fill office">
+																</div>
+															</div>
+														</div>
+													</form>
+												</div>
+												<div class="modal-footer no-bd">
+													<button type="button" id="addRowButton" class="btn btn-primary">Add</button>
+													<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+												</div>
+											</div>
+										</div>
+									</div>
+
+									<div class="table-responsive">
+										<table id="add-row" class="display table table-striped table-hover" >
+											<thead>
+												<tr>
+                                                    <th>title</th>
+                                                    <th>content</th>
+                                                    <th> profile</th>
+                                                    <th>author name</th>
+                                                    <th>author email</th>
+													
+													<th style="width: 10%">Action</th>
+												</tr>
+											</thead>
+											
+											<tbody>
+												<% for(var i=0; i<posts.length; i++){ %>
+												<tr>
+                                                    <td> <a href="/posts/detail/<%=posts[i]._id %>"><%=posts[i].title %></a></td>
+
+													<td> <%= posts[i].content %> </td>
+        <td>
+           <img src="<%=posts[i].imgUrl%>" alt="" height="100" width="100" > 
+        </td>
+        <td> <%=posts[i].author.name%> </td>
+        <td> <%=posts[i].author.email%> </td>
+    </tr>
+												
+                                           <% } %>
+												
+											</tbody>
+										</table>
+									</div>
+								</div>
+							</div>
+						</div>
+	<!--   Core JS Files   -->
+	<% include ../partial/script %>
+</body>
+
+
+</html>
+
+<!-- 
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,6 +154,7 @@
     <thead>
         <th>title</th>
         <th>content</th>
+        <th> profile</th>
         <th>author name</th>
         <th>author email</th>
     </thead>
@@ -26,6 +164,9 @@
     <tr>
         <td> <a href="/posts/detail/<%=posts[i]._id %>"><%=posts[i].title %></a></td>
         <td> <%= posts[i].content %> </td>
+        <td>
+           <img src="<%=posts[i].imgUrl%>" alt="" height="100" width="100" > 
+        </td>
         <td> <%=posts[i].author.name%> </td>
         <td> <%=posts[i].author.email%> </td>
     </tr>
