--- a/views/user/user-list.ejs
+++ b/views/user/user-list.ejs
@@ -222,7 +222,8 @@
         <tbody>
             <% for(var i=0; i<users.length; i++){ %>
             <tr>
-                <td><a href="/users/userdetail/<%=users[i]._id%>"><%=users[i].name %></a></td>
+				<td><a href="/users/userdetail/<%=users[i]._id%>">
+				<%=users[i].name %></a></td>
                 <td> <%= users[i].email %> </td>
                 <td> <%=users[i].passward %> </td>
             </tr>
