--- a/views/post/detail.ejs
+++ b/views/post/detail.ejs
@@ -1,4 +1,86 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
+<html lang="en">
+<% include ../partial/head %>
+<body data-background-color="dark">
+	<div class="wrapper">
+		<% include ../partial/header %>
+
+		<% include ../partial/sidebar %>
+        <div class="main-panel">
+			<div class="content">
+				<div class="page-inner">
+					<div class="page-header">
+						<h4 class="page-title">Forms</h4>
+						<ul class="breadcrumbs">
+							<li class="nav-home">
+								<a href="#">
+									<i class="flaticon-home"></i>
+								</a>
+							</li>
+							<li class="separator">
+								<i class="flaticon-right-arrow"></i>
+							</li>
+							<li class="nav-item">
+								<a href="#">Forms</a>
+							</li>
+							<li class="separator">
+								<i class="flaticon-right-arrow"></i>
+							</li>
+							<li class="nav-item">
+								<a href="#">Basic Form</a>
+							</li>
+						</ul>
+                    </div>
+                    
+                    <div class="col-md-8"></div>
+					<div class="row">
+						
+						<div class="col-md-8">
+							<div class="card card-profile">
+								<div class="card-header" style="background-image: url('/assets/img/blogpost.jpg')">
+									<div class="profile-picture">
+										<div class="avatar avatar-xl">
+											<img src="<%=post.imgUrl %>" alt="..." class="avatar-img rounded-circle">
+										</div>
+									</div>
+								</div>
+								<div class="card-body">
+									<div class="user-profile text-center">
+										<div class="name"><%= post.title %></div>
+                                        <div class="job"><%= post.content%></div>
+                                        <div class="job"><%= post.author.name%></div>
+                                        <div class="job"><%= post.author.email%></div>
+										<div class="desc">A man who hates loneliness</div>
+										<div class="social-media">
+											<a class="btn btn-info btn-twitter btn-sm btn-link" href="#"> 
+												<span class="btn-label just-icon"><i class="flaticon-twitter"></i> </span>
+											</a>
+											<a class="btn btn-danger btn-sm btn-link" rel="publisher" href="#"> 
+												<span class="btn-label just-icon"><i class="flaticon-google-plus"></i> </span> 
+											</a>
+											<a class="btn btn-primary btn-sm btn-link" rel="publisher" href="#"> 
+												<span class="btn-label just-icon"><i class="flaticon-facebook"></i> </span> 
+											</a>
+											<a class="btn btn-danger btn-sm btn-link" rel="publisher" href="#"> 
+												<span class="btn-label just-icon"><i class="flaticon-dribbble"></i> </span> 
+											</a>
+										</div>
+										<div class="view-profile">
+											<a href="#" class="btn btn-secondary btn-block">View Full Profile</a>
+										</div>
+									</div>
+								</div>
+								
+							</div>
+						</div>
+	<!--   Core JS Files   -->
+	<% include ../partial/script %>
+</body>
+
+</html>
+ 
+ 
+ <!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -27,4 +109,4 @@
 </script>
 
 </body>
-</html>
+</html> -->
